--- a/templates/services.html
+++ b/templates/services.html
@@ -28,8 +28,7 @@
             <a href="{% url 'contact' %}" class="btn btn-primary">Get a Quote</a>
         </div>
         <div class="col-md-6 mt-4 mt-md-0">
-            <img src="https://images.unsplash.com/photo-1586769852044-692d6e3703f0?auto=format&fit=crop&q=80&w=800"
-                class="img-fluid rounded shadow-lg" alt="Express Courier">
+            <img src="{% static 'images/hero2.jpg' %}" class="img-fluid rounded shadow-lg" alt="Express Courier">
         </div>
     </div>
 
@@ -49,8 +48,7 @@
             <a href="{% url 'contact' %}" class="btn btn-outline-primary">Learn More</a>
         </div>
         <div class="col-md-6 mt-4 mt-md-0">
-            <img src="https://images.unsplash.com/photo-1578575437130-527eed3abbec?auto=format&fit=crop&q=80&w=800"
-                class="img-fluid rounded shadow" alt="Global Logistics">
+            <img src="{% static 'images/hero3.jpg' %}" class="img-fluid rounded shadow" alt="Global Logistics">
         </div>
     </div>
 
@@ -70,8 +68,7 @@
             <a href="{% url 'contact' %}" class="btn btn-primary">Reserve Space</a>
         </div>
         <div class="col-md-6 mt-4 mt-md-0">
-            <img src="https://images.unsplash.com/photo-1586528116311-ad8dd3c8310d?auto=format&fit=crop&q=80&w=800"
-                class="img-fluid rounded shadow" alt="Warehousing">
+            <img src="{% static 'images/hero4.jpg' %}" class="img-fluid rounded shadow" alt="Warehousing">
         </div>
     </div>
 </div>
